# pre-legal

./: .gitignore  CLAUDE.md  LICENSE  README.md  catalog.json
backend/: pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_auth.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx  types.ts
frontend/src/app/components/NdaDocument/: NdaDocument.module.css  NdaDocument.test.tsx  NdaDocument.tsx
frontend/src/app/components/NdaForm/: NdaForm.module.css  NdaForm.test.tsx  NdaForm.tsx
frontend/src/app/login/: page.module.css  page.tsx
scripts/: start.sh  stop.sh
templates/: LICENSE.txt
